# gtmp

./: README.md  pyproject.toml
configs/: demo_gtmp_akima_mbm.yaml  demo_gtmp_akima_occupancy.yaml  demo_gtmp_mbm.yaml  demo_gtmp_occupancy.yaml
data/configs/panda/: sphere_config.yaml
data/real_map/: aces3.npy  freiburg.npy  intel.npy  orebro.npy  seattle.npy
examples/: gtmp_mbm.py  gtmp_occupancy.py  plot_akima_splines.py
gtmp/: files.py  metrics.py  planners.py  pybullet.py  splines.py  utils.py
gtmp/kinematics/: base.py  point_mass.py  robot.py
gtmp/objectives/: base.py  costs.py  embodiment.py  occupancy_map.py  primitives.py  sphere_approximation.py
